added more comments, implemented fetch stage, and did initial set up in main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,20 @@ project(ecen4593_mips_emulator)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        fetch.cpp
-        fetch.h
-        decode.cpp
-        decode.h
-        Execute.cpp
-        Execute.h
         global_vars.cpp
         global_vars.h
-        intermediate_reg_structs.h
-        Load_Program.c
-        Load_Program.h
-        main.cpp Memory.h Memory.cpp WriteBack.h WriteBack.cpp)
+        Fetch.cpp
+        Fetch.h
+        Decode.cpp
+        Decode.h
+        Execute.cpp
+        Execute.h
+        Memory.cpp
+        Memory.h
+        WriteBack.cpp
+        WriteBack.h
+        main.cpp
+        Load_Insts.cpp
+        Load_Insts.h)
 
 add_executable(ecen4593_mips_emulator ${SOURCE_FILES})
